--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,7 +138,7 @@ const hasMorePosts = posts.length > 6;
                         <!-- <li><a href="https://atcoder.jp/users/Caffeineholic" target="blank" rel="noopener"><img src="C:my-astro-site\public\images\AtCoder_logo_white.png" alt="AtCoder logo" style="background-color: #333;"></a></li> -->
                     </ul>
                     <ul class="footer-menu">
-                        <li><a class="site" href="#">Contact me ▷</a></li>
+                        <li><a class="site" href="#">Contact ▷</a></li>
                         <li><a class="site" href="#">Assets | Credits ▷</a></li>
                     </ul>
                 </div>
