PostCardコンポーネントの背景色の、親要素参照を改善

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -40,7 +40,7 @@ const { title, date, description, slug, thumbnail, isCurrent } = Astro.props; //
         min-height: 70px;
         max-height: 200px;
         box-sizing: border-box;
-        background-color: none; /* デフォルトの背景色 */
+        background-color: #ffffff; /* デフォルトの背景色 */
         border: 1px solid transparent; /* デフォルトで透明なボーダーを設定 */
         border-radius: 10px;
         transition: background-color 0.4s ease, border-color 0.4s ease; /* ホバー時のアニメーション */
