--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ const hasMorePosts = posts.length > 6;
         </section>
 
         <main>
-            <section class="component bg-gray" id="profile">
+            <section class="component" id="profile">
                 <div class="component-container fade-in">
                     <h2 class="profile-heading">Profile</h2>
                     <p class="profile-text">
@@ -95,7 +95,7 @@ const hasMorePosts = posts.length > 6;
                 </div>
             </section>
 
-            <section class="component target" id="posts">
+            <section class="component target bg-gray" id="posts">
                 <div class="component-container fade-in">
                     <h2 class="">Blog</h2>
                     <div class="posts-container">
@@ -116,7 +116,7 @@ const hasMorePosts = posts.length > 6;
                 
             </section>
 
-            <section class="component bg-gray" id="contact">
+            <section class="component" id="contact">
                 <div class="component-container fade-in">
                     <h2 class="">Works</h2>
                     <div class="show-more">
