--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -386,7 +386,6 @@ img {
     padding-left: 1rem;
     /* border-left: 5px solid #8b5935; */
 }
-
 /* ===============================================
    ブログ記事カード (PostCard) 関連のスタイル
    =============================================== */
@@ -395,28 +394,31 @@ img {
 .posts-container {
     display: flex;
     flex-direction: column; /* カードを縦に並べる */
-    overflow: hidden; /* はみ出し防止 */
 }
 
-/* 2枚目以降のカードにのみ適用 */
 .posts-container > a + a {
-    position: relative; /* 擬似要素(罫線)の基準位置にする */
-    margin-top: 0rem;    /* カードの外側に余白を作成 (クリック範囲は広がらない) */
+    position: relative;
+    margin:0.25rem;
 }
 
-/* カード間の罫線を描画するための擬似要素 */
+/* 2枚目以降のカードにのみ適用 罫線を2枚目以降のbefore疑似要素として描く */
+/* .posts-container > a + a {
+    position: relative;
+    margin-top: 0rem;
+    }
+
 .posts-container > a + a::before {
     content: '';
     position: absolute;
-    /* margin-topで空けた空間の中央に線を配置 */
     top: -0rem;
-    left: 50%; /* 1. 親要素の中央へ移動 */
-    transform: translateX(-50%); /* 2. 要素自身の幅の半分だけ戻す */
+    left: 50%;
+    transform: translateX(-50%);
     height: 1px;
     width: 80vw;
     background-color: #dddddd;
-    pointer-events: none; /* 罫線がクリックされるのを防ぐ */
-}
+    pointer-events: none;
+} */
+
 
 /* --------------共通部分---------------- */
 .sub-header{
